--- a/db-server-playbook.yml
+++ b/db-server-playbook.yml
@@ -5,12 +5,28 @@
     mysql_root_password: password
 
   tasks:
+    - name: Install all required dependacies
+      apt: name={{ item }} state=latest update_cache=yes
+      with_items:
+          - python
+          - software-properties-common
+          - python-setuptools 
+          - python-dev 
+          - build-essential 
+          - cryptography
+
     - name: install mysql
       apt: name=mysql-server update_cache=yes cache_valid_time=3600 state=present
 
     - name: pip install pymysql
       pip:
         name: PyMySQL
+
+    - name: Make sure pymysql is present
+      # become: yes # needed if the other tasks are not played as root
+      pip:
+        name: pymysql
+        state: present
 
     - name: start up the mysql service
       shell: "service mysql start"
@@ -34,30 +50,32 @@
         owner: root
         mode: '0600'
 
-   # - name: copy .my.cnf file with root password credentials
-   #   template: src=templates/my.cnf.j2 dest=/root/.my.cnf owner=root mode=0600
+    - name: Create Database user
+      mysql_user:
+        name: db_user
+        password: Passw0rd
+        priv: '*.*:ALL'
+        state: present
+        host: '%'
 
-
- #  - name: update mysql root password for all root accounts
- #    mysql_user:
- #      name: root
- #      host: "{{ item }}"
- #      password: "{{ mysql_root_password }}"
- #      login_user: root
- #      login_password: "{{ mysql_root_password }}"
- #      check_implicit_admin: yes
- #      priv: "*.*:ALL,GRANT"
- #    with_items:
- #      - "{{ ansible_hostname }}"
- #      - 127.0.0.1
- #      - ::1
- #      - localhost
+    - name: Install flask dependacies
+      pip:
+        name: flask, flask-mysql
+        state: present
 
     - name: create a new database
-      mysql_db: name=testdb state=present login_user=root login_password="{{ mysql_root_password }}"
+      mysql_db: name=employee_db state=present login_user=root login_password="{{ mysql_root_password }}"
 
-    - name: add sample data to database
-      copy: src=dump.sql dest=/tmp/dump.sql
+    # - name: add sample data to database
+      # copy: src=dump.sql dest=/tmp/dump.sql
 
-    - name: insert sample data into database
-      mysql_db: name=testdb state=import target=/tmp/dump.sql login_user=root login_password="{{ mysql_root_password }}"
+    # - name: insert sample data into database
+      # mysql_db: name=testdb state=import target=/tmp/dump.sql login_user=root login_password="{{ mysql_root_password }}"
+
+  
+    - name: Copy source code
+      copy: src=app.py dest=/opt/app.py
+
+    - name: Start web mysql-server
+      shell: FLASK_APP=/opt/app.py nohup flask run --host=0.0.0.0 &
+
