--- a/db-server-playbook.yml
+++ b/db-server-playbook.yml
@@ -67,13 +67,13 @@
         state: present
 
     - name: create a new database
-      mysql_db: name=employee_db state=present login_user=root login_password="{{ mysql_root_password }}"
+      mysql_db: name=employee_db state=present login_user=root login_password={{ mysql_root_password }}
 
     # - name: add sample data to database
       # copy: src=dump.sql dest=/tmp/dump.sql
 
-    # - name: insert sample data into database
-      # mysql_db: name=testdb state=import target=/tmp/dump.sql login_user=root login_password={{ mysql_root_password }}
+    - name: insert sample data into database
+      mysql_db: name=testdb state=import target=/tmp/dump.sql login_user=root login_password={{ mysql_root_password }}
 
   
     - name: Copy source code
