--- a/db-server-playbook.yml
+++ b/db-server-playbook.yml
@@ -73,7 +73,7 @@
       # copy: src=dump.sql dest=/tmp/dump.sql
 
     - name: insert sample data into database
-      mysql_db: name=testdb state=import target=/tmp/dump.sql login_user=root login_password={{ mysql_root_password }}
+      mysql_db: name=employee_db state=import target=/dump.sql login_user=root login_password={{ mysql_root_password }}
 
   
     - name: Copy source code
