--- a/tasks/deploy_db.yml
+++ b/tasks/deploy_db.yml
@@ -25,17 +25,17 @@
 
     - name: Create Database user
       mysql_user:
-        name: {{ db_user }}
-        password: {{ db_password }}
+        name: "{{ db_user }}"
+        password: "{{ db_password }}"
         priv: '*.*:ALL'
         state: present
         host: '%'
 
     - name: create a new database
-      mysql_db: name={{ db_name }} state=present login_user=root login_password={{ mysql_root_password }}
+      mysql_db: name=employee_db state=present login_user=root login_password={{ mysql_root_password }}
 
     # - name: add sample data to database
       # copy: src=dump.sql dest=/tmp/dump.sql
 
     - name: insert sample data into database
-      mysql_db: name={{ db_name }} state=import target=/dump.sql login_user=root login_password={{ mysql_root_password }}
+      mysql_db: name=employee_db state=import target=/dump.sql login_user=root login_password={{ mysql_root_password }}
