--- a/tasks/deploy_db.yml
+++ b/tasks/deploy_db.yml
@@ -38,4 +38,4 @@
       # copy: src=dump.sql dest=/tmp/dump.sql
 
     - name: insert sample data into database
-      mysql_db: name=employee_db state=import target=/dump.sql login_user=root login_password={{ mysql_root_password }}
+      mysql_db: name=employee_db state=import target=../dump.sql login_user=root login_password={{ mysql_root_password }}
