--- a/db-server-playbook.yml
+++ b/db-server-playbook.yml
@@ -3,31 +3,7 @@
   vars_files:
     - "host_vars/target.yml"
 
-  tasks:
-    - name: Install all required dependacies
-      apt: name={{ item }} state=latest update_cache=yes
-      with_items:
-          - python
-          - software-properties-common
-          - python-setuptools 
-          - python-dev 
-          - build-essential 
-
-    - name: Install flask dependacies
-      pip:
-        name: flask, flask-mysql
-        state: present
-      
-    - name: pip install pymysql
-      pip:
-        name: PyMySQL
-
-    - name: Make sure pymysql is present
-      pip:
-        name: pymysql
-        state: present
-      vars:
-        ansible_python_interpreter: /usr/bin/python
-
-    - include: tasks/deploy_db.yml        
-    - include: tasks/deploy_web.yml
+  roles:
+    - python
+    - mysql_db
+    - web
