--- a/roles/mysql_db/tasks/main.yml
+++ b/roles/mysql_db/tasks/main.yml
@@ -11,7 +11,8 @@
     - name: Set password for root user
       mysql_user:
         name: "root"
-        password: "{{ mysql_root_password }}"
+        password: "password"
+#        password: "{{ mysql_root_password }}"
         priv: '*.*:ALL,GRANT'
         host: 'localhost'
         login_unix_socket: /var/run/mysqld/mysqld.sock
@@ -26,14 +27,18 @@
 
     - name: Create Database user
       mysql_user:
-        name: "{{ db_user }}"
-        password: "{{ db_password }}"
+        name: "db_user"
+        password: "Passw0rd"
+#        name: "{{ db_user }}"
+     #   password: "{{ db_password }}"
+        
         priv: '*.*:ALL'
         state: present
         host: '%'
 
     - name: create a new database
-      mysql_db: name=employee_db state=present login_user=root login_password={{ mysql_root_password }}
+      mysql_db: name=employee_db state=present login_user=root login_password=password
+#      mysql_db: name=employee_db state=present login_user=root login_password={{ mysql_root_password }}
 
     # - name: add sample data to database
       # copy: src=dump.sql dest=/tmp/dump.sql
