--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -3,3 +3,4 @@
 
     - name: Start web mysql-server
       shell: FLASK_APP=/opt/app.py nohup flask run --host=0.0.0.0 &
+      changed_when: false
